# noaa-cdr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README-template.md  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
examples/: catalog.json
examples/noaa-cdr-ocean-heat-content/: collection.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-1972-03-2000m/: heat_content_anomaly_0-2000_monthly_1972-03.tif  ocean-heat-content-1972-03-2000m.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-1972-03-700m/: heat_content_anomaly_0-700_monthly_1972-03.tif  ocean-heat-content-1972-03-700m.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-2017-2021-100m/: mean_salinity_anomaly_0-100_pentad_2017-2021.tif  mean_temperature_anomaly_0-100_pentad_2017-2021.tif  ocean-heat-content-2017-2021-100m.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-2017-2021-2000m/: heat_content_anomaly_0-2000_pentad_2017-2021.tif  mean_halosteric_sea_level_anomaly_0-2000_pentad_2017-2021.tif  mean_salinity_anomaly_0-2000_pentad_2017-2021.tif  mean_temperature_anomaly_0-2000_pentad_2017-2021.tif  mean_thermosteric_sea_level_anomaly_0-2000_pentad_2017-2021.tif  mean_total_steric_sea_level_anomaly_0-2000_pentad_2017-2021.tif  ocean-heat-content-2017-2021-2000m.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-2017-2021-700m/: heat_content_anomaly_0-700_pentad_2017-2021.tif  mean_halosteric_sea_level_anomaly_0-700_pentad_2017-2021.tif  mean_salinity_anomaly_0-700_pentad_2017-2021.tif  mean_temperature_anomaly_0-700_pentad_2017-2021.tif  mean_thermosteric_sea_level_anomaly_0-700_pentad_2017-2021.tif  mean_total_steric_sea_level_anomaly_0-700_pentad_2017-2021.tif  ocean-heat-content-2017-2021-700m.json
examples/noaa-cdr-ocean-heat-content/ocean-heat-content-2021-100m/: mean_salinity_anomaly_0-100_yearly_2021.tif  mean_temperature_anomaly_0-100_yearly_2021.tif  ocean-heat-content-2021-100m.json
examples/noaa-cdr-sea-ice-concentration/: collection.json
examples/noaa-cdr-sea-surface-temperature-optimum-interpolation/: collection.json
examples/noaa-cdr-sea-surface-temperature-whoi/: collection.json
examples/ocean-heat-content/: collection.json
examples/sea-ice-concentration/: collection.json  seaice_conc_monthly_nh_197811_202312_v04r00.json
scripts/: create_examples.py  create_item_assets.py  extract_netcdf_asset_metadata.py  format  lint  test
tests/: __init__.py  conftest.py  test_cogify.py  test_commands.py  test_dataset.py  test_module.py  test_ocean_heat_content.py  test_profile.py  test_sea_surface_temperature_optimium_interpolation.py  test_stac.py  test_time.py  test_utils.py
tests/data-files/: seaice_conc_daily_nh_20211231_f17_v04r00.nc  seaice_conc_daily_sh_20211231_f17_v04r00.nc  seaice_conc_monthly_nh_202112_f17_v04r00.nc  seaice_conc_monthly_sh_202112_f17_v04r00.nc
tests/ocean_heat_content/: test_commands.py  test_stac.py
tests/sea_ice_concentration/: test_commands.py  test_stac.py
tests/sea_surface_temperature_optimum_interpolation/: test_commands.py  test_stac.py
tests/sea_surface_temperature_whoi/: test_commands.py  test_stac.py
(+225 files in other folders)
