[metadata]
name = stactools-noaa-cdr
version = attr: stactools.noaa_cdr.__version__
description = NOAA Climate Data Records (CDR) stactools package
long_description = file: README.md
long_description_content_type = text/markdown
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
url = https://github.com/stactools-packages/noaa-cdr
project_urls =
    Issues = https://github.com/stactools-packages/noaa-cdr/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    NOAA
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0
    requests >= 2.0.0
    tqdm >= 4.0.0

[options.packages.find]
where = src
