[metadata]
name = stactools-noaa-cdr
version = attr: stactools.noaa_cdr.__version__
description = NOAA Climate Data Records (CDR) stactools package
long_description = file: README.md
long_description_content_type = text/markdown
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
url = https://github.com/stactools-packages/noaa-cdr
project_urls =
    Issues = https://github.com/stactools-packages/noaa-cdr/issues
keywords =
    stactools
    pystac
    catalog
    STAC
    NOAA
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
install_requires =
    click >= 8.1.3
    click-logging >= 1.0.1 
    cftime >= 1.6.2
    h5netcdf >= 1.0.2
    importlib-resources >= 5.12.0
    numpy >= 1.23.1
    orjson >= 3.8.0
    rasterio >= 1.3.0
    requests >= 2.0.0
    stactools >= 0.4.0
    python-dateutil >= 2.8.2
    tqdm >= 4.0.0
    xarray >= 2022.6

[options.packages.find]
where = src

[options.package_data]
* = *.json
